--- a/views/home_page.ejs
+++ b/views/home_page.ejs
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="../public/css/home_page.css" />
+    <link rel="stylesheet" href="home_page.css" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
@@ -24,80 +24,20 @@
   <body style="height: 800px; padding-left: 90px">
     <div class="header">
       <div class="left">
-        <img class="logoimage" src="/public/images/logo.png" alt="achievo logo" />
+        <img class="logoimage" src="../Icons/logo.png" alt="achievo logo" />
       </div>
 
       <h1 class="mid">Zenith</h1>
 
-      <!-- <div class="right">
-        <img class="search" src="/public/images/search.svg" alt="search" />
-         <i class="bx bx-search bx-sm"></i>
-        <img
-          class="noti"
-          src="/public/images/notifications.png"
-          alt="notifications"
-        />
-
+      <div class="right">
         
-        <img
-          src="/public/images/avisha.jpeg"
-          class="userpp"
-          alt="user profile photo"
-          onclick="toggleMenu()"
-        />
-      </div> -->
-    </div>
-
-    <!-- user menu -->
-    <div class="sub-menu-wrap" id="subMenu">
-      <div class="sub-menu">
-        <div class="user-info">
-          <img src="/public/images/avisha.jpeg" alt="user profile photo" />
-          <h3>Avisha Goyal</h3>
-        </div>
-        <hr />
-        <a
-          href="../user_menu/user_profile.html"
-          class="sub-menu-link"
-          target="_blank"
-        >
-          <i class="bx bx-user"></i>
-          <p>My Profile</p>
-          <span>></span>
-        </a>
-        <a
-          href="../user_menu/about_us.html"
-          class="sub-menu-link"
-          target="_blank"
-        >
-          <i class="bx bx-star"></i>
-          <p>About Us</p>
-          <span>></span>
-        </a>
-
-        <a
-          href="../user_menu/support.html"
-          class="sub-menu-link"
-          target="_blank"
-        >
-          <i class="bx bx-question-mark"></i>
-          <p>Feedback</p>
-          <span>></span>
-        </a>
-
-        <a
-          href="../../LandingPage/FrontEnd/landing_page.html"
-          class="sub-menu-link"
-        >
-          <i class="bx bx-log-out"></i>
-          <p>Log out</p>
-          <span>></span>
-        </a>
       </div>
     </div>
 
+    
+
     <!-- sidebar -->
-    <!-- <div class="nav" id="nav">
+    <div class="nav" id="nav">
         <nav class="nav__content">
             <div class="nav__toggle" id="nav-toggle">
                 <i class='bx bx-chevron-right' ></i>
@@ -123,15 +63,7 @@
                     <span class="nav__name">Motivational wheel</span>
                 </a>
 
-                <a href="../frontEnd/Features/hour_rule.html" class="nav__link">
-                    <i class='bx bx-file' ></i>
-                    <span class="nav__name">Analyse your day</span>
-                </a>
-
-                <a href="../frontEnd/Features/milestone_setter.html" class="nav__link">
-                    <i class='bx bx-flag'></i>
-                    <span class="nav__name">Milestone Setter</span>
-                </a>
+                
 
                 <a href="../frontEnd/Features/priority_setter.html" class="nav__link">
                     <i class='bx bx-bar-chart-square' ></i>
@@ -139,7 +71,7 @@
                 </a>
             </div>
         </nav>
-    </div> -->
+    </div>
 
     <!-- pomodoro and to-do -->
     <div
