--- a/views/spinning_wheel.ejs
+++ b/views/spinning_wheel.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eisenhower Matrix</title>
+    <title>Spinning Wheel</title>
     <link rel="stylesheet" href="styles.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,136 +12,26 @@
         <link rel="icon" type="image" href="../../Icons/logo.png">
 
     
-    <link rel="stylesheet" href="/public/css/spinning_wheel.css">
+    <link rel="stylesheet" href="spinning_wheel.css">
     
        
    
 </head>
 <body style="height: 800px; padding-left: 90px">
-    <div class="header">
-      <div class="left">
-        <img class="logoimage" src="../../Icons/logo.png" alt="achievo logo" />
-      </div>
-
-      <h1 class="mid">Zenith</h1>
-
-      <div class="right">
-        <img class="search" src="../../Icons/search.svg" alt="search" />
-        <!-- <i class="bx bx-search bx-sm"></i> -->
-        <img
-          class="noti"
-          src="../../Icons/notifications.png"
-          alt="notifications"
-        />
-
-        
-        <img
-          src="../../Icons/avisha.jpeg"
-          class="userpp"
-          alt="user profile photo"
-          onclick="toggleMenu()"
-        />
-      </div>
+  <div class="header">
+    <div class="left">
+      <img class="logoimage" src="../../Icons/logo.png" alt="zenith logo" />
     </div>
 
+    <h1 class="mid">Spinning Wheel</h1>
 
-  <!-- user menu -->
-  <div class="sub-menu-wrap" id="subMenu">
-    <div class="sub-menu">
-      <div class="user-info">
-        <img src="../../Icons/avisha.jpeg" alt="user profile photo" />
-        <h3>Avisha Goyal</h3>
-      </div>
-      <hr />
-      <a
-        href="../frontEnd/user_menu/user_profile.html"
-        class="sub-menu-link"
-        target="_blank"
-      >
-        <i class="bx bx-user"></i>
-        <p>My Profile</p>
-        <span>></span>
-      </a>
-      <a
-        href="../frontEnd/user_menu/about_us.html"
-        class="sub-menu-link"
-        target="_blank"
-      >
-        <i class="bx bx-star"></i>
-        <p>About Us</p>
-        <span>></span>
-      </a>
-
-      <a
-        href="../frontEnd/user_menu/support.html"
-        class="sub-menu-link"
-        target="_blank"
-      >
-        <i class="bx bx-question-mark"></i>
-        <p>Support</p>
-        <span>></span>
-      </a>
-
-      <a
-        href="../../LandingPage/FrontEnd/landing_page.html"
-        class="sub-menu-link"
-      >
-        <i class="bx bx-log-out"></i>
-        <p>Log out</p>
-        <span>></span>
-      </a>
+    <div class="right">
+     
     </div>
   </div>
 
 
-    <!-- side bar navigation menu -->
-    <div class="nav" id="nav">
-        <nav class="nav__content">
-            <div class="nav__toggle" id="nav-toggle">
-                <i class='bx bx-chevron-right' ></i>
-            </div>
-
-            <a href="../home_page.html" class="nav__logo">
-                <i class='bx bx-menu' ></i>
-                <span class="nav__logo-name">Features</span>
-            </a>
-
-            <div class="nav__list">
-               
-                <a href="../home_page.html" class="nav__link">
-                    <i class='bx bx-alarm' ></i>
-                        <span class="nav__name">Pomodoro-ToDo</span>
-                </a>
-                
-                <a href="eisenhower_matrix.html" class="nav__link ">
-                    <i class='bx bx-grid-alt'></i>
-                    <span class="nav__name">Eisenhower Matrix</span>
-                </a>
-
-                <a href="spinning_wheel.html" class="nav__link active-link">
-                    <i class='bx bx-webcam'></i>
-                    <span class="nav__name">Motivational wheel</span>
-                </a>
-
-                <a href="hour_rule.html" class="nav__link">
-                    <i class='bx bx-file' ></i>
-                    <span class="nav__name">Analyse your day</span>
-                </a>
-
-                
-                <a href="milestone_setter.html" class="nav__link">
-                    <i class='bx bx-flag'></i>
-                    <span class="nav__name">Milestone Setter</span>
-                </a>
-                <a href="leaderboard.html" class="nav__link">
-                    <i class='bx bx-bar-chart-square' ></i>
-                    <span class="nav__name">Leaderboard</span>
-                </a>
-
-            </div>
-        </nav>
-    </div>
-
+  
 
     </div>
     <div style="
