--- a/views/eisenhower_matrix.ejs
+++ b/views/eisenhower_matrix.ejs
@@ -12,7 +12,8 @@
         <link rel="icon" type="image" href="../../Icons/logo.png">
 
     
-    <link rel="stylesheet" href="eisenhower_matrix.css">
+    <link rel="stylesheet" href="public/css/eisenhower.css">
+
     
        
    
@@ -90,7 +91,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
     
-    <script src="eisenhower_matrix.js"></script>
+    <script src="public/js/eisenhower.js"></script>
  
 </body>
 </html>
