--- a/views/home_page.ejs
+++ b/views/home_page.ejs
@@ -14,7 +14,8 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="home_page.css" />
+    <link rel="stylesheet" href="public/css/home_page.css">
+
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
@@ -135,6 +136,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
-    <script src="home_page.js"></script>
+    <script src="public/js/home_page.js"></script>
+
   </body>
 </html>
