--- a/views/spinning_wheel.ejs
+++ b/views/spinning_wheel.ejs
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spinning Wheel</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="public/css/spinning_wheel.css">
+
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
@@ -70,7 +71,8 @@
     
     
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="spinning_wheel.js"></script>
+    <script src="public/js/spinning_wheel.js"></script>
+
 
  
     </body>
