--- a/views/eisenhower_matrix.ejs
+++ b/views/eisenhower_matrix.ejs
@@ -9,9 +9,9 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
         <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel="stylesheet">
-        <link rel="icon" type="image" href="../../Icons/logo.png">
+        <link rel="icon" type="image/png" href="public/images/logo.png">
 
-    
+
     <link rel="stylesheet" href="public/css/eisenhower.css">
 
     
@@ -21,7 +21,8 @@
 <body style="height: 800px; padding-left: 90px">
     <div class="header">
       <div class="left">
-        <img class="logoimage" src="../../Icons/logo.png" alt="zenith logo" />
+        <img class="logoimage" src="public/images/logo.png" alt="zenith logo" />
+
       </div>
 
       <h1 class="mid">Eisenhower Matrix</h1>
