--- a/views/home_page.ejs
+++ b/views/home_page.ejs
@@ -8,7 +8,8 @@
     <title>Zenith Home Page</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="icon" type="image" href="../Icons/logo.png" />
+    <link rel="icon" type="image/png" href="public/images/logo.png">
+
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
       rel="stylesheet"
@@ -25,7 +26,7 @@
   <body style="height: 800px; padding-left: 90px">
     <div class="header">
       <div class="left">
-        <img class="logoimage" src="../Icons/logo.png" alt="achievo logo" />
+        <img class="logoimage" src="public/images/logo.png" alt="zenith logo" />
       </div>
 
       <h1 class="mid">Zenith</h1>
