--- a/views/priority_setter.ejs
+++ b/views/priority_setter.ejs
@@ -10,7 +10,8 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
         <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel="stylesheet">
-        <link rel="icon" type="image" href="../../Icons/logo.png">
+        <link rel="icon" type="image/png" href="public/images/logo.png">
+
 
 </head>
 <body style="height: 800px;
@@ -18,7 +19,8 @@ padding-left: 90px;">
 
     <div class="header">
         <div class="left">
-            <img class="logoimage" src="../../Icons/logo.png" alt="zenith logo">
+            <img class="logoimage" src="public/images/logo.png" alt="zenith logo" />
+
         </div>
         <!-- <h1 class="mid">Eisenhower Matrix</h1> -->
         <div class="right">
