--- a/views/home_page.ejs
+++ b/views/home_page.ejs
@@ -8,14 +8,14 @@
     <title>Zenith Home Page</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="icon" type="image/png" href="public/images/logo.png">
+    <link rel="icon" type="image/png" href="/public/images/logo.png">
 
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="public/css/home_page.css">
+    <link rel="stylesheet" href="/public/css/home_page.css">
 
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
@@ -26,7 +26,7 @@
   <body style="height: 800px; padding-left: 90px">
     <div class="header">
       <div class="left">
-        <img class="logoimage" src="public/images/logo.png" alt="zenith logo" />
+        <img class="logoimage" src="/public/images/logo.png" alt="zenith logo" />
       </div>
 
       <h1 class="mid">Zenith</h1>
@@ -137,7 +137,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
-    <script src="public/js/home_page.js"></script>
+    <script src="/public/js/home_page.js"></script>
 
   </body>
 </html>
