--- a/views/priority_setter.ejs
+++ b/views/priority_setter.ejs
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Priority Setter</title>
-    <link rel="stylesheet" href="public/css/priority_setter.css">
+    <link rel="stylesheet" href="/public/css/priority_setter.css">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
         <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel="stylesheet">
-        <link rel="icon" type="image/png" href="public/images/logo.png">
+        <link rel="icon" type="image/png" href="/public/images/logo.png">
 
 
 </head>
@@ -19,7 +19,7 @@ padding-left: 90px;">
 
     <div class="header">
         <div class="left">
-            <img class="logoimage" src="public/images/logo.png" alt="zenith logo" />
+            <img class="logoimage" src="/public/images/logo.png" alt="zenith logo" />
 
         </div>
         <!-- <h1 class="mid">Eisenhower Matrix</h1> -->
@@ -56,7 +56,7 @@ padding-left: 90px;">
 
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="public/js/priority_setter.js"></script>
+    <script src="/public/js/priority_setter.js"></script>
 
 </body>
 </html>
