--- a/views/spinning_wheel.ejs
+++ b/views/spinning_wheel.ejs
@@ -4,17 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spinning Wheel</title>
-    <link rel="stylesheet" href="public/css/spinning_wheel.css">
+    <link rel="stylesheet" href="/public/css/spinning_wheel.css">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
         <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel="stylesheet">
-        <link rel="icon" type="image/png" href="public/images/logo.png">
+        <link rel="icon" type="image/png" href="/public/images/logo.png">
 
 
-    
-    <link rel="stylesheet" href="spinning_wheel.css">
     
        
    
@@ -22,7 +20,7 @@
 <body style="height: 800px; padding-left: 90px">
   <div class="header">
     <div class="left">
-      <img class="logoimage" src="public/images/logo.png" alt="zenith logo" />
+      <img class="logoimage" src="/public/images/logo.png" alt="zenith logo" />
 
     </div>
 
@@ -73,7 +71,7 @@
     
     
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="public/js/spinning_wheel.js"></script>
+    <script src="/public/js/spinning_wheel.js"></script>
 
 
  
