--- a/views/eisenhower_matrix.ejs
+++ b/views/eisenhower_matrix.ejs
@@ -9,10 +9,10 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
         <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel="stylesheet">
-        <link rel="icon" type="image/png" href="public/images/logo.png">
+        <link rel="icon" type="image/png" href="/public/images/logo.png">
 
 
-    <link rel="stylesheet" href="public/css/eisenhower.css">
+    <link rel="stylesheet" href="/public/css/eisenhower.css">
 
     
        
@@ -21,7 +21,7 @@
 <body style="height: 800px; padding-left: 90px">
     <div class="header">
       <div class="left">
-        <img class="logoimage" src="public/images/logo.png" alt="zenith logo" />
+        <img class="logoimage" src="/public/images/logo.png" alt="zenith logo" />
 
       </div>
 
@@ -92,7 +92,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
     
-    <script src="public/js/eisenhower.js"></script>
+    <script src="/public/js/eisenhower.js"></script>
  
 </body>
 </html>
